Unmatrix algorithm implementation is wrong https://bugs.webkit.org/show_bug.cgi?id=66080

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-08-16
Reviewed by Dean Jackson.

Source/WebCore:

Current version of the algorithm negates only the scaleX while
it should negate also scaleY and scaleZ when appropriate.

Test: animations/animation-matrix-negative-scale-unmatrix.html

* platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::decompose):

LayoutTests:

* animations/animation-matrix-negative-scale-unmatrix-expected.txt: Added.
* animations/animation-matrix-negative-scale-unmatrix.html: Added.

Canonical link: https://commits.webkit.org/82157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93150 268f45cc-cd09-0410-ab3c-d52691b4dbfc